--- a/style.css
+++ b/style.css
@@ -1,26 +1,62 @@
 body {
-  margin:  0;
-  padding: 0;
-  background-color: #f1f1f1;
-}
+	  margin:  0;
+	  padding: 0;
+	  background-color: #f1f1f1;
+	}
 
-.Frow {
-  margin-bottom: 100px;
-}
-.Frow:last-child {
-  margin-bottom: 0;
-}
+	.F-box {
+	  width: auto;
+      height: auto;
+	  background-image: linear-gradient(140deg, #EADEDB 0%, #BC70A4 50%, #BFD641 75%);
+	  padding: 10px 0; 
+	}
 
-.Frow:after {
-  content: "";
-  display: block;
-  clear: both;
-}
+	.Frow {
+	  width: 700px;
+	  height: 100px;
+	  padding-left: 50px;
+	  margin-bottom: 50px;
+	}
+	.Frow:last-child {
+	  margin-bottom: 0;
+	}
 
-.Fcell {
-  margin-right: 75%;
-}
-.Fcell:last-child {
-  margin-right: 25%; 
-}
+	.Frow:after {
+	  content: "";
+	  display: block;
+	  clear: both;
+	}
+
+	.Fcell {
+	  display: inline-block;
+	  margin-right: 20px;
+	  width: 100px;
+	  height: 100px;
+	  background-color: #101010;
+	  
+	  border-left: solid #8a82fa;
+	  border-top: solid #f18aa2;
+	}
+	.Fcell:last-child {
+	  margin-right: 25%; 
+	}
+	.Folder-flap {
+	  margin-top: 8px;
+	  margin-left: 10px;
+	  padding: 0;
+	  width: 40px;
+	  height: 8px;
+	  background-color: #49AFE9;
+	  border-radius: 2px 10px 0 0;
+	  stroke: #ffffff;
+	}
+	.Folder-body {
+	  margin-left: 10px;
+	  padding: 0;
+	  width: 80px;
+	  height: 70px;
+	  background-color: #0D98E8;
+	  border-top: solid #035E92;
+	  border-radius: 0 10px 10px 10px;
+	}
 
